--- a/OruProjekt/OruProjekt/Content/css.css
+++ b/OruProjekt/OruProjekt/Content/css.css
@@ -12,7 +12,7 @@
     width: 25%;
     height: 500px;
     border: solid;
-    border-width: 1px;
+    border-width: 3px;
     margin: 5px;
 }
 
@@ -31,6 +31,20 @@
     border: solid;
     border-width: 1px;
     margin: 5px;
+}
+#WallPost{
+  
+   
+
+}
+#Posts{
+    
+    border: solid;
+    margin: 1px;
+    height: 90%;
+    margin-top: 10px;
+    width: 100%;
+    position: center;
 }
 
     
