--- a/OruProjekt/OruProjekt/Views/Home/Index.cshtml
+++ b/OruProjekt/OruProjekt/Views/Home/Index.cshtml
@@ -8,12 +8,99 @@
    
     @*<p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>*@
 </div>
+
+
 <div id="vägg">
    
-    <div id="f"> Forskning</div>
-    <div id="u"> Utbildning</div>
-    <div id="s"> Socialt</div>
+    <div id="f">
+        Forskning<br />
+        <input type="text" name="WallPost" id="WallPost">
+        <button id="buttons">Posta på väggen!</button>
+
+
+        <div>
+            @*<script>
+                $(document).ready(function () {
+                    $("#buttons").click(function () {
+
+                        //Meddelandet, profilägarens användarnamn och POST API-länken sparas i variabler.
+                        var thatmessage = $("#WallPost").val();
+
+                        var username = '@Model.AnvNamn';
+                        thatmessage += " Från: " + '@User.Identity.Name';
+                        var route = 'api/Wall/PostWall?reciever=' + username + '&text=' + thatmessage;
+
+                        //jQuery ajax metoden anropas med TYP och URL
+                        $.ajax({
+                            type: "POST",
+                            url: route,
+                            success: function () { location.reload() },
+                            error: function () { alert("Ops! Nu gick det inte som det ska"); }
+                        })
+
+                    });
+                });
+                    </script>
+
+
+
+                </div>*@
+
+
+            <div class="Wall">
+                
+                <div id="Posts">
+                    <ul id="List"></ul>
+                </div>
+                <div id="WallPost">
+
+
+
+
+                    <div id="WallPost">
+
+
+
+                        @*<script>
+                            $(document).ready(function () {
+
+                                var username = '@Model.AnvNamn';
+                                var route = 'api/Wall/GetPostMessages?UserName=' + username;
+                                debugger;
+                                $.ajax({
+                                    type: "GET",
+                                    url: route,
+                                    success: function (data) {
+
+
+                                        $(data).each(function () {
+
+
+                                            var li = $('<li/> <br/>');
+                                            var text = this;
+
+                                            $("#List").append($(li).append(text));
+
+                                        })
+
+                                    },
+                                    error: function () { alert("Ops! Nu gick det inte som det skas"); }
+                                })
+                            });
+                                </script>*@
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    
+    
 </div>
+<div id="u"> Utbildning</div>
+<div id="s"> Socialt</div>
+    
 
 @*<div class="row">
     <div class="col-md-4">
